# appmon

./: .env.example  .gitignore  Cargo.toml  PLAN.md  README.md
.github/workflows/: release.yml
crates/appmo-core/: Cargo.toml
crates/appmo-core/src/: config.rs  devices.rs  error.rs  lib.rs  runner.rs  validation.rs
crates/appmo-server/: Cargo.toml
crates/appmo-server/src/: bootstrap.rs  lib.rs  main.rs
crates/appmo-web/: Cargo.toml
crates/appmo-web/src/: lib.rs
crates/appmon-core/: Cargo.toml  build.rs
crates/appmon-core/proto/: emulator_controller.proto  rtc_service.proto
crates/appmon-core/src/: android_grpc.rs  config.rs  devices.rs  lib.rs
crates/appmon-server/: Cargo.toml
crates/appmon-server/src/: bootstrap.rs  lib.rs  main.rs
crates/appmon-web/: Cargo.toml
crates/appmon-web/src/: lib.rs
