[workspace]
members = [
    "crates/appmo-core",
    "crates/appmo-server",
    "crates/appmo-web",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.7", features = ["ws", "macros"] }
base64 = "0.22"
bytes = "1.6"
http = "1.1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
mime_guess = "2.0"
rcgen = "=0.13.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.38", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
webrtc = "0.17.1"
