[package]
name = "appmo-server"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
appmo-core = { path = "../appmo-core" }
appmo-web = { path = "../appmo-web" }
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
http.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
async-trait.workspace = true
