[package]
name = "appmon-server"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
appmon-core = { path = "../appmon-core" }
appmon-web = { path = "../appmon-web" }
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
bytes.workspace = true
futures-util = "0.3"
http.workspace = true
image.workspace = true
rcgen.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
webrtc.workspace = true

[dev-dependencies]
async-trait.workspace = true
